2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/Caret.cs, Mono.TextEditor/FoldSegment.cs: Improved
	  folding behavior.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Changed bracket highlighting in selected
	  regions.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed click on invalid line bug.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Fixed highlighting
	  panel.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* TangoStyle.xml: Tango bracket matching has now better colors.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, TangoStyle.xml, OblivionStyle.xml,
	  Mono.TextEditor/TextUtil.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Style.cs, Makefile.am: Implemented bracket
	  matching.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Implemented Bug 354129 - Auto add
	  second brackets, quotation mark.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs:
	  Implemented Bug 313786 - New editor needs to handle cr/lf issues,
	  encoding.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Implemented Bug 323946 - Undo/Redo
	  functionality are not context sensitive.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/IBuffer.cs, Mono.TextEditor/LineSegmentTree.cs: Fixed
	  reload bug.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* TangoStyle.xml: Changed literal color in tango style.

2008-02-03  Mike Krüger <mkrueger@novell.com> 
